--- a/notebooks/Step1_Metadata.ipynb
+++ b/notebooks/Step1_Metadata.ipynb
@@ -2,23 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('../src')\n",
-    "import json\n",
-    "import utils\n",
+    "sys.path.append('..')\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
    ]
@@ -27,33 +16,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### get sitemap full app dataframe"
+    "### create metadata"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cfg = json.load(open('../config/sitemap.json'))"
+    "from src.utils import create_metadata"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 12/7824 [01:41<5:04:22,  2.34s/it] "
+      "100%|██████████| 7824/7824 [33:54<00:00,  3.85it/s]  \n"
      ]
     }
    ],
    "source": [
-    "utils.create_sitemap_df(**cfg)"
+    "create_metadata()"
    ]
   },
   {
@@ -65,18 +54,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import requests\n",
-    "import bs4"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -119,43 +106,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>https://apkpure.com/group/whatsapp-messenger</td>\n",
+       "      <td>https://apkpure.com/group/94</td>\n",
        "      <td>2019-09-16</td>\n",
        "      <td>weekly</td>\n",
        "      <td>0.6</td>\n",
-       "      <td>https://apkpure.com/sitemaps/group-2.xml.gz</td>\n",
+       "      <td>https://apkpure.com/sitemaps/group.xml.gz</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>https://apkpure.com/group/kik</td>\n",
+       "      <td>https://apkpure.com/group/99</td>\n",
        "      <td>2019-09-16</td>\n",
        "      <td>weekly</td>\n",
        "      <td>0.6</td>\n",
-       "      <td>https://apkpure.com/sitemaps/group-2.xml.gz</td>\n",
+       "      <td>https://apkpure.com/sitemaps/group.xml.gz</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>https://apkpure.com/group/skype-free-im-video-...</td>\n",
+       "      <td>https://apkpure.com/group/115</td>\n",
        "      <td>2019-09-16</td>\n",
        "      <td>weekly</td>\n",
        "      <td>0.6</td>\n",
-       "      <td>https://apkpure.com/sitemaps/group-2.xml.gz</td>\n",
+       "      <td>https://apkpure.com/sitemaps/group.xml.gz</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>https://apkpure.com/group/yahoo-mail-%E2%80%93...</td>\n",
+       "      <td>https://apkpure.com/group/909</td>\n",
        "      <td>2019-09-16</td>\n",
        "      <td>weekly</td>\n",
        "      <td>0.6</td>\n",
-       "      <td>https://apkpure.com/sitemaps/group-2.xml.gz</td>\n",
+       "      <td>https://apkpure.com/sitemaps/group.xml.gz</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>https://apkpure.com/group/line-free-calls-mess...</td>\n",
+       "      <td>https://apkpure.com/group/2048</td>\n",
        "      <td>2019-09-16</td>\n",
        "      <td>weekly</td>\n",
        "      <td>0.6</td>\n",
-       "      <td>https://apkpure.com/sitemaps/group-2.xml.gz</td>\n",
+       "      <td>https://apkpure.com/sitemaps/group.xml.gz</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -167,43 +154,43 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7843738</th>\n",
-       "      <td>https://apkpure.com/ghiceste-personajul-din-la...</td>\n",
-       "      <td>2019-03-23T17:34:40+00:00</td>\n",
+       "      <td>https://apkpure.com/guess-pic-one-piece/com.we...</td>\n",
+       "      <td>2019-08-07T22:22:19+00:00</td>\n",
        "      <td>weekly</td>\n",
        "      <td>0.6</td>\n",
-       "      <td>https://apkpure.com/sitemaps/game_word-21.xml.gz</td>\n",
+       "      <td>https://apkpure.com/sitemaps/game_word-24.xml.gz</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7843739</th>\n",
-       "      <td>https://apkpure.com/ghiceste-masina/com.cristi...</td>\n",
-       "      <td>2019-02-11T07:19:37+00:00</td>\n",
+       "      <td>https://apkpure.com/cari-kata-baru/com.san.car...</td>\n",
+       "      <td>2019-07-19T20:27:12+00:00</td>\n",
        "      <td>weekly</td>\n",
        "      <td>0.6</td>\n",
-       "      <td>https://apkpure.com/sitemaps/game_word-21.xml.gz</td>\n",
+       "      <td>https://apkpure.com/sitemaps/game_word-24.xml.gz</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7843740</th>\n",
-       "      <td>https://apkpure.com/ghiceste-caracterul-animat...</td>\n",
-       "      <td>2019-02-11T07:20:39+00:00</td>\n",
+       "      <td>https://apkpure.com/cocina-de-palabras-juegos-...</td>\n",
+       "      <td>2019-07-19T20:26:40+00:00</td>\n",
        "      <td>weekly</td>\n",
        "      <td>0.6</td>\n",
-       "      <td>https://apkpure.com/sitemaps/game_word-21.xml.gz</td>\n",
+       "      <td>https://apkpure.com/sitemaps/game_word-24.xml.gz</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7843741</th>\n",
-       "      <td>https://apkpure.com/ghiceste-marca-tirului/com...</td>\n",
-       "      <td>2019-02-10T12:52:43+00:00</td>\n",
+       "      <td>https://apkpure.com/%ED%85%8C%EC%8A%A4%ED%8A%B...</td>\n",
+       "      <td>2019-07-17T11:53:34+00:00</td>\n",
        "      <td>weekly</td>\n",
        "      <td>0.6</td>\n",
-       "      <td>https://apkpure.com/sitemaps/game_word-21.xml.gz</td>\n",
+       "      <td>https://apkpure.com/sitemaps/game_word-24.xml.gz</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7843742</th>\n",
-       "      <td>https://apkpure.com/quiz-youtuber-italiani-201...</td>\n",
-       "      <td>2019-02-13T22:59:24+00:00</td>\n",
+       "      <td>https://apkpure.com/kelime-cambaz%C4%B1/com.is...</td>\n",
+       "      <td>2019-07-21T14:53:45+00:00</td>\n",
        "      <td>weekly</td>\n",
        "      <td>0.6</td>\n",
-       "      <td>https://apkpure.com/sitemaps/game_word-21.xml.gz</td>\n",
+       "      <td>https://apkpure.com/sitemaps/game_word-24.xml.gz</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -212,17 +199,17 @@
       ],
       "text/plain": [
        "                                                       loc  \\\n",
-       "0             https://apkpure.com/group/whatsapp-messenger   \n",
-       "1                            https://apkpure.com/group/kik   \n",
-       "2        https://apkpure.com/group/skype-free-im-video-...   \n",
-       "3        https://apkpure.com/group/yahoo-mail-%E2%80%93...   \n",
-       "4        https://apkpure.com/group/line-free-calls-mess...   \n",
+       "0                             https://apkpure.com/group/94   \n",
+       "1                             https://apkpure.com/group/99   \n",
+       "2                            https://apkpure.com/group/115   \n",
+       "3                            https://apkpure.com/group/909   \n",
+       "4                           https://apkpure.com/group/2048   \n",
        "...                                                    ...   \n",
-       "7843738  https://apkpure.com/ghiceste-personajul-din-la...   \n",
-       "7843739  https://apkpure.com/ghiceste-masina/com.cristi...   \n",
-       "7843740  https://apkpure.com/ghiceste-caracterul-animat...   \n",
-       "7843741  https://apkpure.com/ghiceste-marca-tirului/com...   \n",
-       "7843742  https://apkpure.com/quiz-youtuber-italiani-201...   \n",
+       "7843738  https://apkpure.com/guess-pic-one-piece/com.we...   \n",
+       "7843739  https://apkpure.com/cari-kata-baru/com.san.car...   \n",
+       "7843740  https://apkpure.com/cocina-de-palabras-juegos-...   \n",
+       "7843741  https://apkpure.com/%ED%85%8C%EC%8A%A4%ED%8A%B...   \n",
+       "7843742  https://apkpure.com/kelime-cambaz%C4%B1/com.is...   \n",
        "\n",
        "                           lastmod changefreq  priority  \\\n",
        "0                       2019-09-16     weekly       0.6   \n",
@@ -231,29 +218,29 @@
        "3                       2019-09-16     weekly       0.6   \n",
        "4                       2019-09-16     weekly       0.6   \n",
        "...                            ...        ...       ...   \n",
-       "7843738  2019-03-23T17:34:40+00:00     weekly       0.6   \n",
-       "7843739  2019-02-11T07:19:37+00:00     weekly       0.6   \n",
-       "7843740  2019-02-11T07:20:39+00:00     weekly       0.6   \n",
-       "7843741  2019-02-10T12:52:43+00:00     weekly       0.6   \n",
-       "7843742  2019-02-13T22:59:24+00:00     weekly       0.6   \n",
+       "7843738  2019-08-07T22:22:19+00:00     weekly       0.6   \n",
+       "7843739  2019-07-19T20:27:12+00:00     weekly       0.6   \n",
+       "7843740  2019-07-19T20:26:40+00:00     weekly       0.6   \n",
+       "7843741  2019-07-17T11:53:34+00:00     weekly       0.6   \n",
+       "7843742  2019-07-21T14:53:45+00:00     weekly       0.6   \n",
        "\n",
        "                                              sitemap_url  \n",
-       "0             https://apkpure.com/sitemaps/group-2.xml.gz  \n",
-       "1             https://apkpure.com/sitemaps/group-2.xml.gz  \n",
-       "2             https://apkpure.com/sitemaps/group-2.xml.gz  \n",
-       "3             https://apkpure.com/sitemaps/group-2.xml.gz  \n",
-       "4             https://apkpure.com/sitemaps/group-2.xml.gz  \n",
+       "0               https://apkpure.com/sitemaps/group.xml.gz  \n",
+       "1               https://apkpure.com/sitemaps/group.xml.gz  \n",
+       "2               https://apkpure.com/sitemaps/group.xml.gz  \n",
+       "3               https://apkpure.com/sitemaps/group.xml.gz  \n",
+       "4               https://apkpure.com/sitemaps/group.xml.gz  \n",
        "...                                                   ...  \n",
-       "7843738  https://apkpure.com/sitemaps/game_word-21.xml.gz  \n",
-       "7843739  https://apkpure.com/sitemaps/game_word-21.xml.gz  \n",
-       "7843740  https://apkpure.com/sitemaps/game_word-21.xml.gz  \n",
-       "7843741  https://apkpure.com/sitemaps/game_word-21.xml.gz  \n",
-       "7843742  https://apkpure.com/sitemaps/game_word-21.xml.gz  \n",
+       "7843738  https://apkpure.com/sitemaps/game_word-24.xml.gz  \n",
+       "7843739  https://apkpure.com/sitemaps/game_word-24.xml.gz  \n",
+       "7843740  https://apkpure.com/sitemaps/game_word-24.xml.gz  \n",
+       "7843741  https://apkpure.com/sitemaps/game_word-24.xml.gz  \n",
+       "7843742  https://apkpure.com/sitemaps/game_word-24.xml.gz  \n",
        "\n",
        "[7843743 rows x 5 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,20 +248,13 @@
    "source": [
     "metadata"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7.6 64-bit ('dask-env': conda)",
    "language": "python",
-   "name": "python3"
+   "name": "python37664bitdaskenvconda749f9729b86948e1a8cdc521d945a91a"
   },
   "language_info": {
    "codemirror_mode": {
