--- a/notebooks/Step2_Sampling.ipynb
+++ b/notebooks/Step2_Sampling.ipynb
@@ -7,9 +7,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('..')\n",
-    "import json\n",
-    "from src.datasets import get_data\n",
+    "sys.path.append('../')\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
    ]
@@ -20,12 +18,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cfg = json.load(open(\"../config/data-params.json\"))"
+    "from src.datasets import sampling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### sampling for real data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "cfg = json.load(open('../config/sample-params.json'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'mode': 'random', 'size': 150, 'test': False}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cfg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sampling(**cfg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -184,11 +229,48 @@
        "  'https://apkpure.com/legazy-iptv-player/com.legazy.player',\n",
        "  'https://apkpure.com/cartoon-lol-dolls-surprise-pets-wallpapers/com.wallpaper.pets.surprise.dolls.lol.cartoon',\n",
        "  'https://apkpure.com/%D9%83%D9%8A%D9%81%D9%8A%D8%A9-%D8%A7%D8%B2%D8%A7%D9%84%D8%A9-%D8%A7%D8%AB%D8%A7%D8%B1-%D8%A7%D9%84%D8%AD%D8%B1%D9%88%D9%82-%D8%A8%D8%B3%D8%B1%D8%B9%D9%87/com.azizz365.hroq98'],\n",
-       " 'verbose': False,\n",
-       " 'clean': True}"
+       " 'verbose': True,\n",
+       " 'clean': True,\n",
+       " 'log': '/log/fetching.json'}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "json.load(open('../config/data-params.json'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### sampling for test data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cfg = json.load(open('../config/test-sample.json'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'mode': 'random', 'size': 20, 'test': True}"
+      ]
+     },
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,145 +281,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [01:47<00:00, 10.77s/it]\n",
-      "100%|██████████| 5/5 [02:55<00:00, 35.19s/it]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'apk download and decode finished'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "get_data(**cfg)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import glob"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "sampling(**cfg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['../data/datasets/raw/smali/tappme',\n",
-       " '../data/datasets/raw/smali/1xbet',\n",
-       " '../data/datasets/raw/smali/fgteev-videos',\n",
-       " '../data/datasets/raw/smali/princess-spa-girls-games',\n",
-       " '../data/datasets/raw/smali/navtrack-rt',\n",
-       " '../data/datasets/raw/smali/cigar-en-fuego',\n",
-       " '../data/datasets/raw/smali/contratey',\n",
-       " '../data/datasets/raw/smali/moto-sport-simulator',\n",
-       " '../data/datasets/raw/smali/manegeapp',\n",
-       " '../data/datasets/raw/smali/spurgeon-iit',\n",
-       " '../data/datasets/raw/smali/%D8%AA%D9%84%D8%A7%D9%88%D8%A7%D8%AA-%D8%AE%D8%A7%D8%B4%D8%B9%D8%A9-%D9%88%D9%85%D9%86%D8%A7%D8%AC%D8%A7%D8%A9-%D9%85%D8%A4%D8%AB%D8%B1%D8%A9-%D8%AC%D8%AF%D8%A7-%D8%A8%D8%AF%D9%88%D9%86-%D8%A7%D9%86%D8%AA%D8%B1%D9%86%D8%AA',\n",
-       " '../data/datasets/raw/smali/99-clones',\n",
-       " '../data/datasets/raw/smali/%E0%B8%84%E0%B8%B3%E0%B8%96%E0%B8%B2%E0%B8%A1-%E0%B8%AD%E0%B8%B0%E0%B9%84%E0%B8%A3%E0%B9%80%E0%B8%AD%E0%B9%88%E0%B8%A2-%E0%B8%82%E0%B8%B3%E0%B9%86%E0%B8%AE%E0%B8%B2%E0%B9%86-100',\n",
-       " '../data/datasets/raw/smali/klub-uang',\n",
-       " '../data/datasets/raw/smali/editor-plus-photo-editing-tool',\n",
-       " '../data/datasets/raw/smali/lovely-kitty-poops-cat-game',\n",
-       " '../data/datasets/raw/smali/leet-one-in-the-quiver-mcpe',\n",
-       " '../data/datasets/raw/smali/hci',\n",
-       " '../data/datasets/raw/smali/caffe-tazza',\n",
-       " '../data/datasets/raw/smali/forms-app',\n",
-       " '../data/datasets/raw/smali/free-stopwatch',\n",
-       " '../data/datasets/raw/smali/pick-the-perfect-puppy',\n",
-       " '../data/datasets/raw/smali/social-aider-ig',\n",
-       " '../data/datasets/raw/smali/777-%D1%81%D0%BB%D0%BE%D1%82%D0%BE%D0%B2-%D0%B7%D0%BD%D0%B0%D0%BC%D0%B5%D0%BD%D0%B8%D1%82%D1%8B%D0%B5-%D1%81%D0%BB%D0%BE%D1%82%D1%8B',\n",
-       " '../data/datasets/raw/smali/mobile-legends-quiz',\n",
-       " '../data/datasets/raw/smali/taxi-dakar',\n",
-       " '../data/datasets/raw/smali/usb-reverse-tethering',\n",
-       " '../data/datasets/raw/smali/kult%C5%ABra',\n",
-       " '../data/datasets/raw/smali/1-d-royal',\n",
-       " '../data/datasets/raw/smali/atrapa-las-hamburguesas',\n",
-       " '../data/datasets/raw/smali/vha',\n",
-       " '../data/datasets/raw/smali/zga',\n",
-       " '../data/datasets/raw/smali/pilgrim-s-progress-free',\n",
-       " '../data/datasets/raw/smali/math-brain-train',\n",
-       " '../data/datasets/raw/smali/safe-sound',\n",
-       " '../data/datasets/raw/smali/usm-app-control',\n",
-       " '../data/datasets/raw/smali/runnig-gps-free',\n",
-       " '../data/datasets/raw/smali/kata-bijak-islami-dalam-alquran-lengkap',\n",
-       " '../data/datasets/raw/smali/yar%C4%B1na-bak%C4%B1%C5%9F-h%C4%B1zl%C4%B1-eri%C5%9Fim',\n",
-       " '../data/datasets/raw/smali/sentio-file-explorer',\n",
-       " '../data/datasets/raw/smali/tecnoversia',\n",
-       " '../data/datasets/raw/smali/schaffenburg',\n",
-       " '../data/datasets/raw/smali/spelling-corrector%E2%80%93-pronunciation-spell-checker',\n",
-       " '../data/datasets/raw/smali/cieo',\n",
-       " '../data/datasets/raw/smali/stotras-all-gods',\n",
-       " '../data/datasets/raw/smali/covideo',\n",
-       " '../data/datasets/raw/smali/legazy-iptv-player',\n",
-       " '../data/datasets/raw/smali/great-slots-slot-machines',\n",
-       " '../data/datasets/raw/smali/guide-for-lego-juniors-quest',\n",
-       " '../data/datasets/raw/smali/kitty-frames-photo-editor',\n",
-       " '../data/datasets/raw/smali/%EA%B8%89%EB%98%A5',\n",
-       " '../data/datasets/raw/smali/christmas-ringtones',\n",
-       " '../data/datasets/raw/smali/gramophone-music-player',\n",
-       " '../data/datasets/raw/smali/tamil-tech',\n",
-       " '../data/datasets/raw/smali/qx104',\n",
-       " '../data/datasets/raw/smali/music-star-photo-montage',\n",
-       " '../data/datasets/raw/smali/lagu-andra-and-the-backbone',\n",
-       " '../data/datasets/raw/smali/gujarati-keyboard-izee',\n",
-       " '../data/datasets/raw/smali/welcome-to-croatia',\n",
-       " '../data/datasets/raw/smali/pdf-invoice-generator',\n",
-       " '../data/datasets/raw/smali/best-lines98',\n",
-       " '../data/datasets/raw/smali/black-box',\n",
-       " '../data/datasets/raw/smali/world-news',\n",
-       " '../data/datasets/raw/smali/umvpn-free-vpn-proxy-ip-unblocker',\n",
-       " '../data/datasets/raw/smali/grove-brew-house',\n",
-       " '../data/datasets/raw/smali/tabakh-al-freej',\n",
-       " '../data/datasets/raw/smali/maternity-clothes',\n",
-       " '../data/datasets/raw/smali/burmese-english-translator',\n",
-       " '../data/datasets/raw/smali/zigzag-line-2-players',\n",
-       " '../data/datasets/raw/smali/manateq',\n",
-       " '../data/datasets/raw/smali/concurso-sabesp-provas-mat%C3%A9ria-completa-gabarito',\n",
-       " '../data/datasets/raw/smali/theme-for-nokia5-1-plus-fancy-light-wallpaper',\n",
-       " '../data/datasets/raw/smali/little-mary-slots-casino-bar',\n",
-       " '../data/datasets/raw/smali/web-saku',\n",
-       " '../data/datasets/raw/smali/carener-s',\n",
-       " '../data/datasets/raw/smali/qapp-quran-daily',\n",
-       " '../data/datasets/raw/smali/airplane-photo-frames',\n",
-       " '../data/datasets/raw/smali/princess-bubble-rescue-swan',\n",
-       " '../data/datasets/raw/smali/%D8%B5%D9%88%D8%B1-%D8%AE%D9%84%D9%81%D9%8A%D8%A7%D8%AA']"
+       "{'dir': '../data/tests/',\n",
+       " 'urls': ['https://apkpure.com/moto-gallery/com.fivestar.thridgallery',\n",
+       "  'https://apkpure.com/flixwood-100-cinema/com.digitamatix.flixwood',\n",
+       "  'https://apkpure.com/indian-railway-help/com.namichand3.Indian_Railway_Trains_Help',\n",
+       "  'https://apkpure.com/r%C3%A1dio-livre-salvador/com.shoutcast.app.radiolivresalvador',\n",
+       "  'https://apkpure.com/retro-asteroids/com.MaximLoverov.RetroAsteroids',\n",
+       "  'https://apkpure.com/chola-mais/com.mahlabs.cholamais',\n",
+       "  'https://apkpure.com/english-chinese-dictionary/com.English.Chinese.Dictionary.JuliaDictionaryInc',\n",
+       "  'https://apkpure.com/edu-school/com.eventifica.eduSchool',\n",
+       "  'https://apkpure.com/%E6%9A%B4%E8%B5%B0%E6%BC%AB%E7%95%AB%E5%B0%8F%E8%AA%AA%EF%BC%88%E7%B9%81%E7%B0%A1%EF%BC%89/com.baozoumanhuaxiaoshuo815.google',\n",
+       "  'https://apkpure.com/broken-screen-prank/com.prank.screen.crack.urazapp.brokenscreenprank',\n",
+       "  'https://apkpure.com/draw-share-my-little-pony/com.drawshare.mylittlepony',\n",
+       "  'https://apkpure.com/graphics-wallpaper/com.Grafis.usefulthought',\n",
+       "  'https://apkpure.com/qstore/com.e2e.dac',\n",
+       "  'https://apkpure.com/talksapp/com.wTalksApp_8772213',\n",
+       "  'https://apkpure.com/challenge-30/com.conduit.app_1d9a6dd52f9d4ec3b8f258039289fb8d.app',\n",
+       "  'https://apkpure.com/free-terrarium-tv-reference/com.Mayallah.newterrariumref',\n",
+       "  'https://apkpure.com/gles3mark-es-3-0-benchmark/com.tomaskimer.gles3mark',\n",
+       "  'https://apkpure.com/the-specialty-channel/com.primcast.thespecialtychannel2',\n",
+       "  'https://apkpure.com/la-bella/pl.labella.app',\n",
+       "  'https://apkpure.com/karomah-habib-mundzir-bin-fuaad-almusawwa/com.appssemogaberkah.karomahhabibmunzirbinfuaadalmusawwa'],\n",
+       " 'verbose': True,\n",
+       " 'clean': True,\n",
+       " 'log': '/log/fetching.json'}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "glob.glob('../data/datasets/raw/smali/*')"
+    "json.load(open('../config/test-params.json'))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
